bug fix: Corrected text errors (extra white spaces, wrong capitalization, missing comma, etc.

--- a/css/ballard.css
+++ b/css/ballard.css
@@ -93,6 +93,7 @@ body {
 .char-description {
 	position: relative;
 	vertical-align: middle;
+	text-wrap: suppress;
 }
 .btActive {
 	background-color: #24FFE2;
